Pushing updated styles

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!-- Move these to the footer and replace with "Home", etc -->
             <a class="nav__item" href="#about">About</a>
             <a class="nav__item" href="#keyboards">Keyboards</a> 
-            <a class="nav__item" href="./contactform.html">Contact</a>
+            <a class="nav__item" href="./contact.html">Contact</a>
 
             <!-- <a class="nav__item" href="./DB_links/links.html">Links</a -->
           </div>
@@ -38,90 +38,92 @@
       </header>
     </section>
 
-    <!-- <section class="welcome-section">
-      <h3 class="intro">
-        Freelance data management specialist and front-end dev hobbyist. 
-        <br/> I build interactive dashboards, and collect mechanical keyboards.
-      </h3>
-    </section> -->
-
-    <section class="content-section">
-      <div class="content-section__item">
-        <h2 class="pall" id="about">~ A little about me ~</h2>
-        <div class="container">
-          <p>Born and raised in Florida, but was originally born in Poland -- Polish was actually my first language.</p>
-          <p>During the day I work in Supply Chain, but I moonlight as a programming hobbyist, mechanical keyboard enthusiast, and sometimes painter/sewer.</p>
-          <p>When I get bored of all that (rare) I spend time self-teaching Japanese, reading fantasy novels, playing Fallout 4, or trying my hand at artisan keycap and key set design. I hope to invest in and experiment with materials in order to open my own shop sometime this coming year!</p>
-        </div>
-      
-      <div class="content-section__social pall">
-        <p>Catch me on social media to stay up-to-date on keyboard builds, which I'll be streaming on 
-          <a href="https://www.twitch.tv/dsabae" target="_blank" class="content-section__social__link"><strong>Twitch</strong>.</a>
-        </p>
-        <p class="bold">Instagram: 
-          <a href="https://www.instagram.com/dsa.bae/" class="content-section__social__link" target="_blank">@dsa.bae</a>
-        </p>
-        <p class="bold">Twitter: 
-          <a href="https://twitter.com/dsa_bae" class="content-section__social__link" target="_blank">@dsa_bae</a>
-        </p>
-        <p class="bold">Twitch: 
-          <a href="https://www.twitch.tv/dsabae" class="content-section__social__link" target="_blank">@dsabae</a>
-        </p>
-      </div>
-      </div>
-
-      <div class="content-section__item">
-        <h2 id="keyboards">~ Keyboards ~</h2>
-        <div class="container left-align">
-          <p>
-            - <span class="bold">Daily Driver: </span> Ergodox EZ
+    <div class="content">
+      <!-- <section class="welcome-section">
+        <h3 class="intro">
+          Freelance data management specialist and front-end dev hobbyist. 
+          <br/> I build interactive dashboards, and collect mechanical keyboards.
+        </h3>
+      </section> -->
+  
+      <section class="content-section">
+        <div class="content-section__item">
+          <h2 class="pall" id="about">~ A little about me ~</h2>
+          <div class="container">
+            <p>Raised in Florida, but was originally born in Poland -- Polish was actually my first language.</p>
+            <p>During the day I work in Supply Chain, but I moonlight as a programming hobbyist, mechanical keyboard enthusiast, and sometimes painter/sewer.</p>
+            <p>When I get bored of all that (rare) I spend time self-teaching Japanese, reading fantasy novels, playing Fallout 4, or trying my hand at artisan keycap and key set design. I hope to invest in and experiment with materials in order to open my own shop sometime this coming year!</p>
+          </div>
+        
+        <div class="content-section__social pall">
+          <p>Catch me on social media to stay up-to-date on keyboard builds, which I'll be streaming on 
+            <a href="https://www.twitch.tv/dsabae" target="_blank" class="content-section__social__link"><strong>Twitch</strong>.</a>
           </p>
-          <p>
-            - RGB Hot Swap Gamakay K61
+          <p class="bold">Instagram: 
+            <a href="https://www.instagram.com/dsa.bae/" class="content-section__social__link" target="_blank">@dsa.bae</a>
           </p>
-          <p>
-            - AKKO 8034 // Japan World Tour
+          <p class="bold">Twitter: 
+            <a href="https://twitter.com/dsa_bae" class="content-section__social__link" target="_blank">@dsa_bae</a>
           </p>
-          <br>
+          <p class="bold">Twitch: 
+            <a href="https://www.twitch.tv/dsabae" class="content-section__social__link" target="_blank">@dsabae</a>
+          </p>
         </div>
-
-        <h3 class="pall">~ Upcoming Builds ~</h3>
-
-        <div class="container">
-          <h3 class="kb-builds">          
-            ✦ Mercutio 40% Through-Hole (Mechwild)
-          </h3>
-          <p>FR4 Sandwhich Board with OLED display and rotary encoder</p>
-          <p>Black case and PCB</p>
         </div>
-
-        <div class="container">
-          <h3 class="kb-builds"> 
-            ✦ Microdox 30% (Boardsource)
-          </h3>
-          <p>Red FR4 Case and PCB with cute backplate art</p>
-          <p>Gateron Ink Red v2s // Krytox 205g0 on stem & housings // 0.15mm TX Films</p>
+  
+        <div class="content-section__item">
+          <h2 id="keyboards">~ Keyboards ~</h2>
+          <div class="container left-align">
+            <p>
+              - <span class="bold">Daily Driver: </span> Ergodox EZ
+            </p>
+            <p>
+              - RGB Hot Swap Gamakay K61
+            </p>
+            <p>
+              - AKKO 8034 // Japan World Tour
+            </p>
+            <br>
+          </div>
+  
+          <h3 class="pall">~ Upcoming Builds ~</h3>
+  
+          <div class="container">
+            <h3 class="kb-builds">          
+              ✦ Mercutio 40% Through-Hole (Mechwild)
+            </h3>
+            <p>FR4 Sandwhich Board with OLED display and rotary encoder</p>
+            <p>Black case and PCB</p>
+          </div>
+  
+          <div class="container">
+            <h3 class="kb-builds"> 
+              ✦ Microdox 30% (Boardsource)
+            </h3>
+            <p>Red FR4 Case and PCB with cute backplate art</p>
+            <p>Gateron Ink Red v2s // Krytox 205g0 on stem & housings // 0.15mm TX Films</p>
+          </div>
+  
+          <div class="container">
+            <h3 class="kb-builds">          
+              &#10003 Rhymestone 40-Key Split Ortho (Boardsource)
+            </h3>
+            <p>Clear Acrylic Case, White FR4 PCB</p>
+          </div>
+  
+          <div class="container">
+            <h3 class="kb-builds">          
+              ✦ SMKeyboards Alice 
+            </h3>
+              <p>Sandwich board, stacked acrylic case.</p>
+              <p>Top half Wisteria, bottom half Non-Glare Clear</p>
+              <p>White Sneakbox PCB // USB-C Bottom-Oriented</p>
+              <p>C3Equalz x JWK Banana Splits // Krytox 205g0 on stem & housings // 0.15mm Pink TX Films</p>
+          </div>
+  
         </div>
-
-        <div class="container">
-          <h3 class="kb-builds">          
-            &#10003 Rhymestone 40-Key Split Ortho (Boardsource)
-          </h3>
-          <p>Clear Acrylic Case, White FR4 PCB</p>
-        </div>
-
-        <div class="container">
-          <h3 class="kb-builds">          
-            ✦ SMKeyboards Alice 
-          </h3>
-            <p>Sandwich board, stacked acrylic case.</p>
-            <p>Top half Wisteria, bottom half Non-Glare Clear</p>
-            <p>White Sneakbox PCB // USB-C Bottom-Oriented</p>
-            <p>C3Equalz x JWK Banana Splits // Krytox 205g0 on stem & housings // 0.15mm Pink TX Films</p>
-        </div>
-
-      </div>
-    </section>
+      </section>
+    </div>
 
     <footer class="footer">
       <div class="social">
