--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <section class="header">
+    <section class="header pall">
       <header class="header flex flex-jc-sb flex-ai-c">
         <a class="header__text left-align flex-child" href="https://carnaluna.github.io/" >Dsa Bae</a>
         <a class="flex-child" href="https://carnaluna.github.io/">
@@ -28,7 +28,6 @@
 
         <nav class="header__nav flex-child">
           <div class="nav__links">
-            <!-- Move these to the footer and replace with "Home", etc -->
             <a class="nav__item" href="/">Home</a>
             <a class="nav__item" href="#keyboards">Keyboards</a> 
             <a class="nav__item" href="./contact.html">Contact</a>
@@ -45,9 +44,9 @@
       </section>
       
       <section class="content">
-        <div class="content__about content__item flex">
+        <div class="content__about content__item flex flex-ai-c">
           <div class="content__card">
-            <h2 class="pall" id="about">~ A little about me ~</h2>
+            <h2 id="about">~ A little about me ~</h2>
             <div class="container">
               <p>Born in Poland, raised in Florida -- Polish was actually my first language.</p>
               <p>During the day I work in Supply Chain, but I moonlight as a programming hobbyist, mechanical keyboard enthusiast, and sometimes painter/sewer.</p>
@@ -107,13 +106,13 @@
             <h2 id="keyboards">~ Keyboards ~</h2>
             <div class="kb__container">
               <p>
-                - <span class="bold">Daily Driver: </span> Ergodox EZ
+                <span class="bold">✦ Daily Driver: </span> Ergodox EZ outfitted with DSA Astrolokeys // Gat Reds (205g0)
               </p>
               <p>
-                - RGB Hot Swap Gamakay K61
+                <span class="bold">✦ Gamakay K61</span>, outfitted with KTT Rose switches (205g0, 0.15mm TX Films)
               </p>
               <p>
-                - AKKO 8034 // Japan World Tour
+                <span class="bold">✦ AKKO 8034</span>, outfitted with Japan World Tour keycaps // stock Cherry MX Browns
               </p>
               <br>
             </div>
@@ -140,6 +139,13 @@
             </div>
           </div>
         </div>
+
+        <div class="content__item content__card" hidden>
+          <h3>Suggested Content</h3>
+          <p>Some data here</p>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione voluptatem deserunt veritatis dolores recusandae similique! Eligendi, sapiente eaque numquam soluta aperiam asperiores necessitatibus error velit voluptates iste ullam quas! Voluptate.
+            Sequi, cumque illum quidem rerum accusamus accusantium consectetur magnam, perferendis temporibus tempora odit quibusdam, repellendus quis corporis ut excepturi sit harum alias! Magnam officia numquam accusantium expedita quidem qui dolores.</p>
+        </div>
       </section>
     </div>
 
@@ -153,7 +159,7 @@
             xmlns="http://www.w3.org/2000/svg" 
             width="1.55rem"
             height="1.55rem"
-            fill="#ca97ed"
+            fill="#bb80e2"
             viewBox="0 0 82 82">
             <path class="cls-1" d="M41,82A41,41,0,1,1,82,41,41,41,0,0,1,41,82ZM41,2A39,39,0,1,0,80,41,39,39,0,0,0,41,2Z"/>
             <path class="cls-1" d="M59,31.78a14.8,14.8,0,0,1-4.24,1.16A7.38,7.38,0,0,0,58,28.86a14.73,14.73,0,0,1-4.69,1.79A7.39,7.39,0,0,0,40.54,35.7a7.28,7.28,0,0,0,.19,1.68A21,21,0,0,1,25.5,29.67a7.4,7.4,0,0,0,2.29,9.86,7.4,7.4,0,0,1-3.35-.92v.09a7.39,7.39,0,0,0,5.93,7.24,7.2,7.2,0,0,1-1.95.26A7.31,7.31,0,0,1,27,46.07a7.38,7.38,0,0,0,6.9,5.13A14.94,14.94,0,0,1,23,54.26a20.92,20.92,0,0,0,11.32,3.32c13.59,0,21-11.25,21-21,0-.32,0-.64,0-1A15,15,0,0,0,59,31.78"/></g></g></svg>
@@ -167,7 +173,7 @@
         xmlns="http://www.w3.org/2000/svg" 
         width="1.55rem"
         height="1.55rem"
-        fill="#ca97ed"
+        fill="#bb80e2"
         viewBox="0 0 82 82">
           <path class="cls-1" d="M41,82A41,41,0,1,1,82,41,41,41,0,0,1,41,82ZM41,2A39,39,0,1,0,80,41,39,39,0,0,0,41,2Z"/>
           <path class="cls-1" d="M52,23H30a7,7,0,0,0-7,7V52a7,7,0,0,0,7,7H52a7,7,0,0,0,7-7V30A7,7,0,0,0,52,23Zm2,4.15h.79v6.1l-6.08,0,0-6.1ZM35.87,37.31A6.32,6.32,0,1,1,34.67,41,6.33,6.33,0,0,1,35.87,37.31ZM55.5,52A3.45,3.45,0,0,1,52,55.48H30A3.45,3.45,0,0,1,26.51,52V37.31h5.37a9.84,9.84,0,1,0,18.24,0H55.5Z"/></g></g></svg>
@@ -181,7 +187,7 @@
         xmlns="http://www.w3.org/2000/svg"
         width="1.4rem"
         height="1.4rem"
-        fill="#ca97ed"
+        fill="#bb80e2"
         viewBox="0 0 24 24"
         >
         <path
@@ -194,7 +200,7 @@
         id="twitch"
         href="https://www.twitch.tv/dsabae"
         target="_blank"
-        ><svg fill="#ca97ed" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 50 50" width="1.35rem" height="1.35rem"><path d="M 5.3125 1 L 5.0625 1.65625 L 2.0625 9.65625 L 2 9.8125 L 2 43 L 13 43 L 13 49 L 20.40625 49 L 20.71875 48.71875 L 26.4375 43 L 35.40625 43 L 35.71875 42.71875 L 48 30.4375 L 48 1 Z M 6.6875 3 L 46 3 L 46 29.59375 L 34.59375 41 L 25.59375 41 L 19.59375 47 L 15 47 L 15 41 L 4 41 L 4 10.1875 Z M 10 5 L 10 35 L 18 35 L 18 42.40625 L 19.71875 40.71875 L 25.4375 35 L 37.40625 35 L 37.71875 34.71875 L 43.71875 28.71875 L 44 28.40625 L 44 5 Z M 12 7 L 42 7 L 42 27.5625 L 36.5625 33 L 24.59375 33 L 24.28125 33.28125 L 20 37.5625 L 20 33 L 12 33 Z M 20 13 L 20 27 L 26 27 L 26 13 Z M 30 13 L 30 27 L 36 27 L 36 13 Z M 22 15 L 24 15 L 24 25 L 22 25 Z M 32 15 L 34 15 L 34 25 L 32 25 Z"/></svg></a>
+        ><svg fill="#bb80e2" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 50 50" width="1.35rem" height="1.35rem"><path d="M 5.3125 1 L 5.0625 1.65625 L 2.0625 9.65625 L 2 9.8125 L 2 43 L 13 43 L 13 49 L 20.40625 49 L 20.71875 48.71875 L 26.4375 43 L 35.40625 43 L 35.71875 42.71875 L 48 30.4375 L 48 1 Z M 6.6875 3 L 46 3 L 46 29.59375 L 34.59375 41 L 25.59375 41 L 19.59375 47 L 15 47 L 15 41 L 4 41 L 4 10.1875 Z M 10 5 L 10 35 L 18 35 L 18 42.40625 L 19.71875 40.71875 L 25.4375 35 L 37.40625 35 L 37.71875 34.71875 L 43.71875 28.71875 L 44 28.40625 L 44 5 Z M 12 7 L 42 7 L 42 27.5625 L 36.5625 33 L 24.59375 33 L 24.28125 33.28125 L 20 37.5625 L 20 33 L 12 33 Z M 20 13 L 20 27 L 26 27 L 26 13 Z M 30 13 L 30 27 L 36 27 L 36 13 Z M 22 15 L 24 15 L 24 25 L 22 25 Z M 32 15 L 34 15 L 34 25 L 32 25 Z"/></svg></a>
       </div>
     </footer>
 
