Fixing broken home page styles

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap"
     rel="stylesheet"
     />
-    <link href="./app/scss/styles.css" rel="stylesheet" />
     <link rel="import" href="../../../webcomponents/slideshow.html">
+    <link href="/app/scss/styles.css" rel="stylesheet" />
   </head>
 
   <body>
