--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
                 <a href="https://www.twitch.tv/dsabae" target="_blank" class="content__social__link"><strong>Twitch</strong>.</a>
               </span>
 
-              <span class="content__social bold">Instagram: 
+              <span class="content__social-link bold">Instagram: 
                 <a href="https://www.instagram.com/dsa.bae/" class="content__social__link" target="_blank">@dsa.bae</a>
               </span>
 
-              <span class="content__social bold">Twitter: 
+              <span class="content__social-link bold">Twitter: 
                 <a href="https://twitter.com/dsa_bae" class="content__social__link" target="_blank">@dsa_bae</a>
               </span>
 
-              <span class="content__social bold">Twitch: 
+              <span class="content__social-link bold">Twitch: 
                 <a href="https://www.twitch.tv/dsabae" class="content__social__link" target="_blank">@dsabae</a>
               </span>
             </div>
