Added image alt text, updated About section padding

--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
           <div class="slideshow-container">
             <div class="slideshow-imgs">
               <div class="slides fade">
-                  <img src=".\images\kb1.jpg" class="slide-img">
+                  <img src=".\images\kb1.jpg" class="slide-img" alt="keyboard-image">
               </div>
               <div class="slides fade">
-                  <img src=".\images\kb2.jpg" class="slide-img">
+                  <img src=".\images\kb2.jpg" class="slide-img" alt="keyboard-image">
               </div>
               <div class="slides fade">
-                  <img src=".\images\kb3.jpg" class="slide-img">
+                  <img src=".\images\kb3.jpg" class="slide-img" alt="keyboard-image">
               </div>
               <div class="slides fade">
-                  <img src=".\images\kb4.jpg" class="slide-img">
+                  <img src=".\images\kb4.jpg" class="slide-img" alt="keyboard-image">
               </div>
               
               <a class="prev" onclick="plusSlides(1)">&#10094;</a>
