Updated styles for contact form, updated home page for mobile view

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DSA Bae</title>
+    <title id="title">Home</title>
     <link
     href="https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap"
     rel="stylesheet"
@@ -44,10 +44,10 @@
       </section>
       
       <section class="content">
-        <div class="content__about content__item flex flex-ai-c">
-          <div class="content__card flex flex-ai-c">
+        <div class="content__about grid-container content__item flex flex-ai-c">
+          <div class="content__card">
             <div class="container"> 
-              <h2 id="about">~ A little about me ~</h2>
+              <h2 id="about heading">~ A little about me ~</h2>
               <p>Born in Poland, raised in Florida -- Polish was actually my first language.</p>
               <p>During the day I work in Supply Chain, but I moonlight as a programming hobbyist, mechanical keyboard enthusiast, and sometimes painter/sewer.</p>
               <p>When I find myself with spare time on my hands (rare) I enjoy self-teaching Japanese, reading fantasy novels, playing Fallout 4, or trying my hand at artisan keycap and key set design. I hope to invest in and experiment with materials in order to open my own shop sometime this coming year!</p>
@@ -154,9 +154,9 @@
           </div>
         </div>
 
-        <div class="kb content__card content__item flex flex-jc-sb">
+        <div class="kb content__item flex flex-jc-sb">
           <div class="kb__flex-child">
-            <h2 id="keyboards">~ Keyboards ~</h2>
+            <h2 id="keyboards heading">~  Keyboards ~</h2>
             <div class="kb__container">
               <p>
                 <span class="bold">✦ Daily Driver: </span> Ergodox EZ outfitted with DSA Astrolokeys // Gat Reds (205g0)
@@ -172,7 +172,7 @@
           </div>
   
           <div class="kb__flex-child">
-            <h2 class="pall">~ Upcoming Builds ~</h2>
+            <h2 class="pall heading">~ Upcoming Builds ~</h2>
     
             <div class="kb__container">
               <p><span class="kb__builds">✦ Mercutio 40% Through-Hole (Mechwild): </span>FR4 Sandwhich Board with OLED display and rotary encoder // Black case and PCB</p>
