Added some responsive functionlity to Contact Form mobile view. Form still broken.

--- a/index.html
+++ b/index.html
@@ -56,18 +56,6 @@
                 <span class="content__social">Catch me on social media to stay up-to-date on keyboard builds, which I'll be streaming on 
                   <a href="https://www.twitch.tv/dsabae" target="_blank" class="content__social__link"><strong>Twitch</strong>.</a>
                 </span>
-                
-                <!-- <span class="content__social-link bold">Instagram: 
-                <a href="https://www.instagram.com/dsa.bae/" class="content__social__link" target="_blank">@dsa.bae</a>
-                </span>
-
-                <span class="content__social-link bold">Twitter: 
-                  <a href="https://twitter.com/dsa_bae" class="content__social__link" target="_blank">@dsa_bae</a>
-                </span>
-                
-                <span class="content__social-link bold">Twitch: 
-                  <a href="https://www.twitch.tv/dsabae" class="content__social__link" target="_blank">@dsabae</a> -->
-                <!-- </span> -->
 
                 <div class="content__social-icons">
                   <a
@@ -156,7 +144,7 @@
 
         <div class="kb content__item flex flex-jc-sb">
           <div class="kb__flex-child">
-            <h2 id="keyboards heading">~  Keyboards ~</h2>
+            <h2 id="keyboards" class="heading">~  Keyboards ~</h2>
             <div class="kb__container">
               <p>
                 <span class="bold">✦ Daily Driver: </span> Ergodox EZ outfitted with DSA Astrolokeys // Gat Reds (205g0)
