New header styles attempt two

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="title">Home</title>
     <link
     href="https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap"
@@ -12,11 +15,11 @@
     rel="stylesheet"
     />
     <link rel="import" href="../../../webcomponents/slideshow.html">
-    <link href="/app/scss/styles.css" rel="stylesheet" />
+    <link href="app/scss/styles.css" rel="stylesheet" />
   </head>
 
   <body>
-    <section class="header pall">
+    <section class="header">
       <header class="header flex flex-jc-sb flex-ai-c">
         <a class="header__text left-align flex-child" href="https://carnaluna.github.io/" >Dsa Bae</a>
         <a class="flex-child" href="https://carnaluna.github.io/">
@@ -30,7 +33,7 @@
           <div class="nav__links">
             <a class="nav__item" href="/">Home</a>
             <a class="nav__item" href="#keyboards">Keyboards</a> 
-            <a class="nav__item" href="./contact.html">Contact</a>
+            <a class="nav__item" href="/src/contact.html">Contact</a>
           </div>
         </nav>
       </header>
@@ -114,16 +117,16 @@
           <div class="slideshow-container">
             <div class="slideshow-imgs">
               <div class="slides fade">
-                  <img src=".\images\kb1.jpg" class="slide-img" alt="keyboard-image">
+                  <img src="images\kb1.jpg" class="slide-img" alt="keyboard-image">
               </div>
               <div class="slides fade">
-                  <img src=".\images\kb2.jpg" class="slide-img" alt="keyboard-image">
+                  <img src="images\kb2.jpg" class="slide-img" alt="keyboard-image">
               </div>
               <div class="slides fade">
-                  <img src=".\images\kb3.jpg" class="slide-img" alt="keyboard-image">
+                  <img src="images\kb3.jpg" class="slide-img" alt="keyboard-image">
               </div>
               <div class="slides fade">
-                  <img src=".\images\kb4.jpg" class="slide-img" alt="keyboard-image">
+                  <img src="images\kb4.jpg" class="slide-img" alt="keyboard-image">
               </div>
               
               <a class="prev" onclick="plusSlides(1)">&#10094;</a>
