Fixing broken route

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="nav__links">
             <a class="nav__item" href="/">Home</a>
             <a class="nav__item" href="#keyboards">Keyboards</a> 
-            <a class="nav__item" href="/src/contact.html">Contact</a>
+            <a class="nav__item" href="src/contact.html">Contact</a>
           </div>
         </nav>
       </header>
