First pass at working form

--- a/src/contact.html
+++ b/src/contact.html
@@ -47,7 +47,7 @@
         </section>
 
         <section class="contact__form-container">
-          <form class="contact__form" method="post" action="../app/php/contactform.php">
+          <form class="contact__form" method="post" action="../contactform.php">
             <h2 class="contact__form__title">Keyboard Build Service</h2>
             <h3 class="contact__form__header">Full Name</h3>
             <input name="first_name" class="half-width" type="text" placeholder="First name" />
@@ -70,7 +70,7 @@
               </div>
               
               <div>
-                <input required name="switches" class="half-width" type="text" placeholder="Switches" />
+                <input name="switches" class="half-width" type="text" placeholder="Switches" />
                 <input name="lube" class="tqtr-width" type="text" placeholder="Lube Preference?" />
               </div>
             </div>
