--- a/src/success.html
+++ b/src/success.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Success Page</title>
+    <link
+    href="https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap"
+    rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap"
+    rel="stylesheet"
+    />
     <link href="../app/scss/styles.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Your message has been sent!</h1>
+    <div class="content">
+        <h1>Your message has been sent!</h1>
+    </div>
 </body>
 </html>
