Added some basic form validation to contact.html

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
         <a class="flex-child" href="https://carnaluna.github.io/">
           <img
             class="header__img"
-            src="./images/profile_photo.png"
+            src="images/profile_photo.png"
             alt="profile-image"/>
         </a>
 
         <nav class="header__nav flex-child">
           <div class="nav__links">
-            <a class="nav__item" href="/">Home</a>
+            <a class="nav__item" href="./">Home</a>
             <a class="nav__item" href="#keyboards">Keyboards</a> 
-            <a class="nav__item" href="src/contact.html">Contact</a>
+            <a class="nav__item" href="contact.html">Contact</a>
           </div>
         </nav>
       </header>
@@ -246,6 +246,6 @@
       </div>
     </footer>
 
-    <script src="/app/js/script.js"></script>
+    <script src="app/js/main.js"></script>
   </body>
 </html>
