--- a/success.html
+++ b/success.html
@@ -14,7 +14,7 @@
     href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap"
     rel="stylesheet"
     />
-    <link href="../app/scss/styles.css" rel="stylesheet" />
+    <link href="app/scss/styles.css" rel="stylesheet" />
 </head>
 <body>
     <div class="content">
