Edited about me section

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           <div class="content__card">
             <div class="container"> 
               <h2 id="about heading">~ A little about me ~</h2>
-              <p>Born in Poland, raised in Florida -- Polish was actually my first language.</p>
-              <p>During the day I work in Supply Chain, but I moonlight as a programming hobbyist, mechanical keyboard enthusiast, and sometimes painter/sewer.</p>
+              <p>Born in Poland, raised in Florida-- Polish was actually my first language.</p>
+              <p>During the day I work in e-commerce, but I moonlight as a programming hobbyist, mechanical keyboard enthusiast, and sometimes painter/sewer.</p>
               <p>When I find myself with spare time on my hands (rare) I enjoy self-teaching Japanese, reading fantasy novels, playing Fallout 4, or trying my hand at artisan keycap and key set design. I hope to invest in and experiment with materials in order to open my own shop sometime this coming year!</p>
               
               <div class="content__social">
