--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
         </div>
 
         <div class="kb content__item flex flex-jc-sb">
-          <div class="kb__flex-child">
-            <h2 id="keyboards" class="heading">~  Keyboards ~</h2>
+          <div class="kb__flex-child keyboards">
+            <h2 id="keyboards" class="content__heading">~  Keyboards ~</h2>
             <div class="kb__container">
               <p>
                 <span class="bold">✦ Daily Driver: </span> Ergodox EZ outfitted with DSA Astrolokeys // Gat Reds (205g0)
@@ -161,7 +161,7 @@
           </div>
   
           <div class="kb__flex-child">
-            <h2 class="pall heading">~ Upcoming Builds ~</h2>
+            <h2 class="pall content__heading">~ Upcoming Builds ~</h2>
     
             <div class="kb__container">
               <p><span class="kb__builds">✦ Mercutio 40% Through-Hole (Mechwild): </span>FR4 Sandwhich Board with OLED display and rotary encoder // Black case and PCB</p>
