--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
               <div class="slides fade">
                   <img src="images\kb4.jpg" class="slide-img" alt="keyboard-image">
               </div>
+              <div class="slides fade">
+                  <img src="images\kb5.jpg" class="slide-img" alt="keyboard-image">
+              </div>
               
               <a class="prev" onclick="plusSlides(1)">&#10094;</a>
               <a class="next" onclick="plusSlides(-1)">&#10095;</a>
