Added Wishlist page and updated Links

--- a/links/wishlist.html
+++ b/links/wishlist.html
@@ -94,25 +94,30 @@
 
     <!-- Featured Link -->
     <h2>Featured</h2>
-    <a href="https://carnaluna.github.io/" class="featured">
+    <a href="#" class="featured">
       <span class="arrow">⇒</span>
-      <span class="featured__text">Personal Site</span>
+      <span class="featured__text">Something I really want</span>
       <span class="arrow">⇐</span>
     </a>
 
-    <!-- Popular Content -->
     <div class="content_block">
-      <h2>Freelance Content</h2>
-      <!-- <a
-        href="https://www.upwork.com/freelancers/~019e02afa7da01490c"
-        target="_blank"
-        >Upwork</a
-      > -->
-      <a href="#">Portfolio</a>
-      <a href="#">Certifications</a>
+      <h2>Camera Wishlist</h2>
+      
+      <a href="https://www.artisanobscura.com/threaded/tsunami">Artisan Obscura Shutter Release Button</a>
+      <a href="https://www.amazon.com/Fujifilm-Accessory-Manufacturer-Accessories-UV-CPL-FLD/dp/B0161Y6CLY/ref=sr_1_2?crid=30FRCUH1OZ4TG&keywords=fujinon+18-55mm+lens&qid=1648333574&sprefix=fujinon+18-55mm+lens%2Caps%2C637&sr=8-2">Fujinon 18-55mm f/2.8 Lens</a>
+      <!-- <a href="#">Another Link Here</a>
+      <a href="#">Another Link Here</a> -->
+    </div>
+
+    <div class="content_block">
+      <h2>Amazon Wishlist</h2>
+      
       <a href="#">Another Link Here</a>
       <a href="#">Another Link Here</a>
-      <a href="mailto:gbmytabc@yahoo.com">Hire Me</a>
+    </div>
+
+    <div class="content_block">
+      <a href="mailto:gbmytabc@yahoo.com">Contact Me</a>
     </div>
   </body>
 </html>
