updated styles for wishlist

--- a/DB_links/links.html
+++ b/DB_links/links.html
@@ -18,7 +18,7 @@
       <div class="header__container">
         <img
           class="header__img"
-          src="\DB_links\links\img\Profile.jpg"
+          src=".\links\img\Profile.jpg"
           alt="profile-image"
         />
         <a class="handle" href="https://www.instagram.com/dsa.bae/">
