--- a/DB_links/links.html
+++ b/DB_links/links.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:400,700"
     />
-    <link rel="stylesheet" href="\DB_links\links\app\scss\style.css" />
+    <link rel="stylesheet" href=".\links\app\scss\style.css" />
   </head>
 
   <body>
