Added Wishlist to Links page

--- a/DB_links/links.html
+++ b/DB_links/links.html
@@ -118,6 +118,7 @@
           <a class="channels__link" href="https://www.instagram.com/dsa.bae/" target="_blank">Instagram</a>
           <a class="channels__link" href="https://www.twitch.tv/dsabae" target="_blank">Twitch</a>
           <a class="channels__link" href="mailto:dsa.bae@yahoo.com">Contact</a>
+          <a class="channels__link" href="https://www.amazon.com/hz/wishlist/ls/1JOF4PTIIOZ0D?ref_=wl_share" target="_blank">Wishlist</a>
         </div>
       </div>
     </div>
