--- a/DB_links/links.html
+++ b/DB_links/links.html
@@ -113,7 +113,7 @@
       <a href="https://etsy.me/3faNcnV" target="_blank">JuniKey 3D Star Artisans</a>
       
       <div class="content">
-        <h2 class="channels__header">☞ Social Links ☜</h2>
+        <h2 class="channels__header">☞ Channels ☜</h2>
         <div class="channels">
           <a class="channels__link" href="https://www.instagram.com/dsa.bae/" target="_blank">Instagram</a>
           <a class="channels__link" href="https://www.twitch.tv/dsabae" target="_blank">Twitch</a>
