--- a/DB_links/wishlist.html
+++ b/DB_links/wishlist.html
@@ -145,7 +145,7 @@
       <a href="#">⭐ $$ - Printer ⭐</a>
 
       <div class="content">
-        <h2 class="channels__header">☞ Social Links ☜</h2>
+        <h2 class="channels__header">☞ Channels ☜</h2>
         <div class="channels">
           <a class="channels__link" href="https://www.instagram.com/dsa.bae/" target="_blank">Instagram</a>
           <a class="channels__link" href="https://www.twitch.tv/dsabae" target="_blank">Twitch</a>
