--- a/DB_links/links.html
+++ b/DB_links/links.html
@@ -109,7 +109,7 @@
       <a href="https://www.instagram.com/migicaps/" target="_blank">Migicaps Mewtwo Artisan</a>
       <a href="https://etsy.me/3xdfXX9" target="_blank">Malaya Artisan Sushi Cap</a>
       <a href="https://etsy.me/3ieav2e" target="_blank">Capsmiths Succulents</a>
-      <a href="https://etsy.me/2V1up7G" target="_blank">BreakWooden Oni Artisan</a>
+      <a href="https://etsy.me/2V1up7G" target="_blank">BreakWooden Artisan</a>
       <a href="https://etsy.me/3faNcnV" target="_blank">JuniKey 3D Star Artisans</a>
       
       <div class="content">
