Added link to profile image

--- a/DB_links/wishlist.html
+++ b/DB_links/wishlist.html
@@ -20,11 +20,11 @@
     <!-- <h2>-- Add a Logo Here --</h2> -->
     <div class="header">
       <div class="header__container">
-        <img
+        <a href="https://carnaluna.github.io/DB_links/links.html"><img
           class="header__img"
           src=".\links\img\Profile.jpg"
           alt="profile-image"
-        />
+        /></a>
         <a class="handle" href="https://www.instagram.com/dsa.bae/">
           <span>@dsa.bae</span>
         </a>
