Updated Upcoming Builds section

--- a/DB_links/links.html
+++ b/DB_links/links.html
@@ -94,14 +94,15 @@
       <a href="https://ergodox-ez.com/pages/customize" target="_blank">Ergodox EZ Shine</a>
       <a href="https://bit.ly/2VgqaF2" target="_blank">AKKO 3084 - Japan World Tour Keycaps</a>
       <a href="https://bit.ly/3icb0d6" target="_blank">Gamakay K61 - Hot Swap</a>
+      <a href="https://bit.ly/3ibRq0D" target="_blank">Rhymestone Split Ortho</a>
+      <a href="https://bit.ly/3zMEG6s" target="_blank">Smol Microdox 30%</a>
       <!-- <a href="https://amzn.to/36Y1dRs" target="_blank">Portable Bluetooth w/ Trackpad</a> -->
     </div>
     
     <div class="content builds">
       <h2>☞ Upcoming Builds ☜</h2>
       <a href="https://mechwild.com/product/mercutio/" target="_blank">Mercutio 40% Through-Hole</a>
-      <a href="https://bit.ly/3ibRq0D" target="_blank">Rhymestone Split Ortho</a>
-      <a href="https://bit.ly/3zMEG6s" target="_blank">Smol Microdox 30%</a>
+      <a href="https://low-key-keyboards.myshopify.com/products/spikey-boi-65-group-buy" target="_blank">Low Key Keyboards Spikey Boi 65%</a>
     </div>
     
     <div class="content artisans">
