Updated Upcoming Builds section 2

--- a/DB_links/links.html
+++ b/DB_links/links.html
@@ -101,7 +101,7 @@
     
     <div class="content builds">
       <h2>☞ Upcoming Builds ☜</h2>
-      <a href="https://mechwild.com/product/mercutio/" target="_blank">Mercutio 40% Through-Hole</a>
+      <a href="https://mechwild.com/product/mercutio/" target="_blank">Mechwild Mercutio 40%</a>
       <a href="https://low-key-keyboards.myshopify.com/products/spikey-boi-65-group-buy" target="_blank">Low Key Keyboards Spikey Boi 65%</a>
     </div>
     
